[metadata]
name = stsci.tools
version = 3.4.11
author = STScI
author-email = help@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
classifier =
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.7
requires-dist =
	astropy (>=1.0)
	numpy (>=1.7)

[files]
packages_root = lib
packages =
	stsci
	stsci.tools
	stsci.tools.tests
package_data =
	stsci.tools.tests = *.fits
scripts =
	scripts/convertwaiveredfits
	scripts/stscidocs
	scripts/convertlog

[nosetests]
exclude = .*(testutil|tester)

[aliases]
test=pytest

[global]
setup_hooks =
	stsci.distutils.hooks.use_packages_root
	stsci.distutils.hooks.tag_svn_revision
	stsci.distutils.hooks.version_setup_hook

[backwards_compat]
use_2to3 = False
zip_safe = False
