[metadata]
name = stsci.tools
description = Collection of STScI utility functions
long_description = Collection of STScI utility functions
long_description_content_type = text/plain
keywords = astronomy, astrophysics, utility
author = STScI
author_email = help@stsci.edu
license = BSD
license_file = LICENSE.md
url = https://www.github.com/spacetelescope/stsci.tools
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir =
    = lib
zip_safe = False
setup_requires =
    setuptools_scm
install_requires =
    packaging
    numpy
    astropy>=5.0.4
python_requires = >=3.8

[options.packages.find]
where = lib

[options.extras_require]
test =
    pytest
    pytest-astropy-header
    pytest-doctestplus
docs =
    sphinx<8
    numpydoc
    sphinx_rtd_theme

[options.package_data]
stsci.tools.tests = data/*.*

[options.entry_points]
console_scripts =
    convertwaiveredfits = stsci.tools.convertwaiveredfits:main
    convertlog = stsci.tools.convertlog:main

[tool:pytest]
minversion = 4
testpaths = lib/stsci/tools
addopts = --doctest-modules
astropy_header = true
xfail_strict = true
filterwarnings =
    ignore:.*Column disp option
    ignore:NMPFIT is deprecated
    ignore:GFIT is deprecated
    ignore:unclosed file:ResourceWarning

[flake8]
# E501: line too long
# W504: line break after binary operator
ignore = E501,W504

[bdist_wheel]
# If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
